# ai_tunnel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.trae/rules/: main.md
configs/: config.example.json  config.example.toml  example.toml
src/: __init__.py  cli.py  main.py
src/config/: __init__.py  config_loader.py  loader.py  settings.py  validator.py
src/models/: __init__.py  base.py  config.py  connection.py
src/router/: __init__.py  failover.py  health_check.py  middleware.py  provider_manager.py  request_transformer.py  response_transformer.py  router.py  streaming_proxy.py
src/server/: __init__.py  endpoints.py  http_server.py
src/server/admin/: __init__.py  auth.py  config_api.py  dashboard.py  logs.py  providers.py  routes.py
src/server/static/admin/: app.js  index.html  style.css
src/utils/: __init__.py  exceptions.py  logger.py  sse_parser.py  ssl_manager.py  toml_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_failover.py  test_health_check.py  test_loader_validator.py  test_models.py  test_provider_manager.py  test_request_transformer.py  test_response_transformer.py  test_response_transformer_streaming.py  test_router.py  test_router_failover.py  test_router_streaming.py  test_sse_parser.py  test_ssl_manager.py  test_streaming_proxy.py  test_utils.py
